--- a/DynamoBandService/Properties/launchSettings.json
+++ b/DynamoBandService/Properties/launchSettings.json
@@ -16,7 +16,10 @@
       "launchUrl": "swagger",
       "applicationUrl": "https://localhost:7280;http://localhost:5280",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "AWS-USER": "music",
+        "AWS-ACCESS-KEY-ID": "AKIAQWGKZBBFCAL36A2K",
+        "AWS-SECRET-KEY-ID": "lEkLSQiE/TnejCYoVaWVEm51zbnGow9lx3Z0Mfvi"
       }
     },
     "IIS Express": {
