chenges to generate guid's for Bands and Person

--- a/DynamoBandService/Properties/launchSettings.json
+++ b/DynamoBandService/Properties/launchSettings.json
@@ -18,6 +18,7 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
         "AWS-USER": "music",
+        "AWS-REGION": "us-east-1",
         "AWS-ACCESS-KEY-ID": "AKIAQWGKZBBFCAL36A2K",
         "AWS-SECRET-KEY-ID": "lEkLSQiE/TnejCYoVaWVEm51zbnGow9lx3Z0Mfvi"
       }
